fix(post): place tagline below expando z-index

--- a/style/modules/content/_sitetable.scss
+++ b/style/modules/content/_sitetable.scss
@@ -168,6 +168,7 @@
 	opacity: 0.54;
 	position: relative;
 	top: em(2, 10);
+	z-index: 1;
 	@include transition-default;
 
 	&:hover {
@@ -266,6 +267,7 @@
 	position: relative;
 	left: em(2, 12);
 	top: em(9, 12);
+	z-index: 0;
 }
 
 .flat-list.buttons {
